samples/_failures_safe/1761487986_e39098_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69b2a9c9.c: In function ‘main’:
./samples/SAFE/__tmp_69b2a9c9.c:131: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_69b2a9c9.c:130:5: error: expected declaration or statement at end of input
  130 |     if
      |     ^~
